option java_outer_classname = "LCDataTransfer";


option java_package = "com.navinfo.opentsp.platform.location.protocol.nodecluster";

message DataTransfer{
	required		bool	isNewTask			=1;
	repeated		int64	terminalId			=2;
	required        int64	beginDate			=3;
	required		int64	endDate 			=4;
}
